--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@
   --main-text-color: #757575;
   --accent-color: #2196f3;
   --button-color: #2196f3;
-  --button-text-color: #ffffff;
+  --button-second-text-color: #ffffff;
+  --button-first-text-color: #212121;
 }
 
 body {
@@ -93,10 +94,11 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: var(--button-text-color);
+  color: var(--button-second-text-color);
   background-color: var(--button-color);
   cursor: pointer;
   border-radius: 4px;
+  border-style: none;
 }
 /*-----------QALITY-----------*/
 .quality-title {
@@ -178,4 +180,41 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+/*-----------PORTFOLIO PAGE-----------*/
+/*-----------PORTFOLIO BTN-----------*/
+.portfolio-filter-btn {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--button-first-text-color);
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  cursor: pointer;
+  border-style: none;
+}
+.portfolio-filter-btn:hover,
+.portfolio-filter-btn:focus {
+  color: var(--button-second-text-color);
+  background-color: var(--button-color);
+}
+/*-----------PORTFOLIO WORKS-----------*/
+.portfolio-work-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--second-title-color);
+}
+.portfolio-work-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+
+  color: var(--main-text-color);
 }
