--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,10 @@ body {
   letter-spacing: 0.03em;
   color: #ffffff;
 }
+.footer-address-link:hover,
+.footer-address-link:focus {
+  color: var(--accent-color);
+}
 .footer-link {
   font-style: normal;
   font-weight: 400;
@@ -180,6 +184,10 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+.footer-link:hover,
+.footer-link:focus {
+  color: var(--accent-color);
 }
 
 /*-----------PORTFOLIO PAGE-----------*/
@@ -215,6 +223,5 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
-
   color: var(--main-text-color);
 }
